# bc-techmap

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.github/workflows/: deploy.yml
data/: ecosystems.toml
src/: app.rs  main.rs  theme.rs
src/components/: arrow.rs  canvas.rs  ecosystem_card.rs  migration_panel.rs  mobile_view.rs  mod.rs  ring_view.rs
src/data/: ecosystem.rs  mod.rs  scoring.rs
style/: main.css
